Change homepage image & fix alignment

--- a/css/homepage.css
+++ b/css/homepage.css
@@ -199,7 +199,7 @@ hr.small {
   position: relative;
   width: 100%;
   height: 100%;
-  background: url(../img/homepage.jpg) no-repeat center center fixed;
+  background: url(../img/homepage.jpg) no-repeat top center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   background-size: cover;
